Добавил гитигнор и фикс замечаний

--- a/css #5/index.html
+++ b/css #5/index.html
@@ -4,23 +4,23 @@
 	<head>
 		<title>css  #5</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
 		<div class="content">
 			<div class="content-top">
 				<div class="content-top__category">Travel</div>
 				<h1 class="content-top__title">
-					Donec sed odio dui. Cras mattis consectetur purus sit amet fermentum. 
+					Donec sed odio dui. Cras mattis consectetur purus sit amet fermentum.
 				</h1>
 			</div>
 			<div class="content__image">
-				<img src="img/CentrFons.jpg" alt="" />
+				<img src="./img/CentrFons.jpg" alt="" />
 			</div>
 			<div class="content-bottom">
 				<div class="content-bottom__text">
 					<p>Donec aredsed odio dui. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec ullamcorper nulla non metus auctor fringilla.</p>
-               <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+					<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
 				</div>
 				<div class="content-bottom-info">
 					<ul class="content-bottom-info-list">
